Se realizó la implementación de Google Maps en la aplicación, con las librerías y cambios necesarios para su correcto funcionamiento.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     //play service auth
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
+    //Google Mapgs
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
