--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".menulateral"
+            android:name=".MenuLateral"
             android:label="@string/title_activity_menulateral"
-            android:theme="@style/NoActionBar"></activity>
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".MainActivity">
+            android:theme="@style/NoActionBar"/>
+        <activity android:name=".InicioSesion">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
