Se arregló el mapa para que se muestre en un Activity y no un fragment, teniendo así acceso a todas sus funcionalidades. Adicionalmente, se finalizó el cierre de sesión para la cuenta de Google. Correxión de errores menores

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".ui.Mapa"></activity>
         <activity
-            android:name=".MenuLateral"
+            android:name=".ui.MenuLateral"
             android:label="@string/title_activity_menulateral"
-            android:theme="@style/NoActionBar"/>
-        <activity android:name=".InicioSesion">
+            android:theme="@style/NoActionBar" />
+        <activity android:name=".ui.InicioSesion">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
