--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,10 @@ dependencies {
     //Facebook
     implementation 'com.facebook.android:facebook-android-sdk:5.5.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    //API REST
+    implementation 'com.android.volley:volley:1.1.0'
+    //implementation 'com.google.code.gson:gson:2.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
