--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -40,6 +41,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'com.android.support:multidex:1.0.3'
+
     //firebase
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
@@ -60,8 +63,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     //API REST
-    implementation 'com.android.volley:volley:1.1.0'
+    //implementation 'com.android.volley:volley:1.1.0'
     //implementation 'com.google.code.gson:gson:2.4'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
