--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@mipmap/logo_chronos"
+        android:icon="@mipmap/chronosl"
         android:label="Chronos"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
