Se agregó la ventana en donde se muestra toda la información de un evento en específico, una vez se selecciona desde la pestaña de "eventos". Adicionalmente, desde esta misma ventana del evento se puede mostrar la ubicación del mismo en Maps.
De igual manera, desde el Mapa se puede elegir un evento y redirecciona al usuario a la ventana donde se muestra la información del mismo.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,20 +5,20 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.REORDER_TASKS" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/chronosl"
         android:label="Chronos"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Activities.Mapa"></activity>
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Activities.InformacionEvento"></activity>
+        <activity android:name=".Activities.Mapa" />
         <activity
             android:name=".Activities.VentanaPrincipal"
             android:label="@string/title_activity_menulateral"
