-se modificó el dieño del despliegue de eventos -se agregó el logo de chronos para dispositivos que usen logo circular
Signed-off-by: Cristian1Alexar <36050372+Cristian1Alexar@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/chronosl"
         android:label="Chronos"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/chronosl"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
