Ya se actualiza el nombre del usuario, y se refleja ese cambio en el menú de la aplicación. Adicionalmente, se mejoró la opción de elegir la imagen del usuario para poder recortarla en vez de tan solo re-escalarla. De esta manera no se alterar el tamaño de la imagen y que así se vea mejor al momento de mostrarla.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ dependencies {
 
     //API REST
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+
+    //Recortar Imagenes
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
 
 apply plugin: 'com.google.gms.google-services'
