--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,21 @@ apply plugin: 'androidx.navigation.safeargs.kotlin'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
+
     defaultConfig {
         applicationId "com.example.login"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -27,7 +39,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
@@ -42,24 +53,19 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
     implementation 'com.android.support:multidex:1.0.3'
-
     //firebase
     implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.google.firebase:firebase-auth:16.0.4'
-
     //play service auth
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-
     //Google Mapgs
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.google.android.gms:play-services-location:7.8.0'
-
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-
     //Facebook
     implementation 'com.facebook.android:facebook-android-sdk:5.5.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
@@ -68,7 +74,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.1'
 
     //Recortar Imagenes
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+
+    //Subir imagenes
+    //
 }
 
 apply plugin: 'com.google.gms.google-services'
